; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_vlclua_stream_readline.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_stream.c_vlclua_stream_readline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"stream\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_stream_readline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_stream_readline(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32**, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @luaL_checkudata(i32* %5, i32 1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %7 = inttoptr i64 %6 to i32**
  store i32** %7, i32*** %3, align 8
  %8 = load i32**, i32*** %3, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = call i8* @vlc_stream_ReadLine(i32* %9)
  store i8* %10, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %1
  %14 = load i32*, i32** %2, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @lua_pushstring(i32* %14, i8* %15)
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @free(i8* %17)
  br label %22

19:                                               ; preds = %1
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @lua_pushnil(i32* %20)
  br label %22

22:                                               ; preds = %19, %13
  ret i32 1
}

declare dso_local i64 @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i8* @vlc_stream_ReadLine(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @lua_pushnil(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
